update of dependencies

--- a/Coolinar/blib/lib/Coolinar/TODO.org
+++ b/Coolinar/blib/lib/Coolinar/TODO.org
@@ -2,7 +2,11 @@
  - [ ] Image storage in database (with posting via form)
  - [ ] Image in cache update support
  - [ ] Plaesant recipe view with 'to print' button
- - [ ]  Change favicon.ico
- - [ ]  Admin part for creatin deleting users, viewing of statistics (separate app)
- - [ ]  Posting support with rating
- - [ ]  Ingredients list for recipe
+ - [ ] Change favicon.ico
+ - [ ] Admin part for adding/deleting users, viewing of statistics (separate app)
+ - [ ] Posting support with rating
+ - [ ] Ingredients list for recipe
+ - [ ] Make GUI sharp & cool
+ - [ ] More real life comprehensive & aggresive tests (test object creation)
+ - [ ] Distributable application
+ - [ ] tests for page navigation
